feat: Beta v1 - TJX Multi-brand PO Parser & Carton Calculation
##  주요 개선사항

### 1. 다중 브랜드 Buyer 감지 시스템 (Priority-based)
-  파일명 기반 감지 (최우선): TJMaxx, Marshalls, HomeGoods
-  BUYER 필드 파싱 (Mother PO): Shawnte Moore (Marshalls), Maria Andrade (HomeGoods)
-  DC 네이밍 패턴 감지 (DC PO): MAR PHOENIX, TJM SAN ANTONIO 등
-  DEPT# 폴백: 41=HomeGoods, 82=UNKNOWN (TJMaxx/Marshalls 구분 불가 시)

### 2. Pack Size & 카톤 계산 수정
-  Products CSV 13번째 컬럼(UnitsPerCase) 자동 로딩
-  카톤 수량 계산 개선: ceil(수량 / pack_size)
-  DC별 카드 UI에 정확한 카톤 수 표시

### 3. Summary UI 개선
-  총 주문 금액 표시 (unit_price  mother_qty)
-  불필요한 필드 제거: DC Ship Window, 총 SKU 수
-  이모지 아이콘 추가:
-  카톤 단위 한글화: '카톤'
-  재고 모드 버튼 재배치 (테이블 상단 회색 바)

### 4. 코드 정리 & 환경 설정
-  Debugging 코드 제거 (print, find_nan 함수)
-  Favicon 추가 (Purple H logo)
-  .env.example 문서화
-  로딩 단계별 메시지 (4단계)
-  에러 메시지 한글화
-  test_pdf_parsing.py 추가 (파서 테스트 도구)

### 5. 검증 완료 (Validated)
-  HomeGoods PO: 39 SKUs, 8 DCs, 5 mismatches
-  Marshalls PO: 9 SKUs, 5 DCs, 0 mismatches
-  TJMaxx PO: 9 SKUs, 5 DCs, 1 mismatch

##  변경된 파일
- backend/services/po_parser.py: Buyer 감지 로직 개선
- backend/services/data_loader.py: Products CSV 컬럼 매핑
- backend/routers/mmd.py: 에러 메시지 한글화, 디버깅 제거
- frontend/index.html: Summary UI, 카톤 표시, 버튼 재배치
- frontend/favicon.svg: 새 파비콘 추가
- .env.example: 환경변수 문서화
- .gitignore: PDF, 파싱 결과 JSON 제외
- test_pdf_parsing.py: 파서 테스트 도구

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ outputs/*
 temp/*
 data/*.csv
 data/*.xlsx
+data/*_parsed.json
+*.pdf
+*.PDF
 
 # --- 5. 폴더 구조 유지를 위한 예외 처리 ---
 # (빈 폴더는 git에 안 올라가므로, .keep 파일은 허용)
